--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,38 @@
 Monday
 
+
+
+
 Tuesday
+
+
+
+
 
 Wednesday
 
+
+
+
+
 Thusrday
+
+
+
 
 Friday
 
+1. pack up stuff
+2. must start paper reading
+3. a small challenge?
+
+
+
 Saturday
+
+
+
+
 
 Sunday
 
