--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,15 @@
+1 May - 7 May
+
 Monday
-
-
 
 
 Tuesday
 
 
-
-
-
 Wednesday
 
 
-
-
-
 Thusrday
-
-
 
 
 Friday
@@ -31,8 +23,22 @@ Friday
 Saturday
 
 
-
-
-
 Sunday
 
+
+
+8 May - 15 May
+
+Monday
+
+Tuesday
+
+Wednesday
+
+Thusrday
+
+Friday
+
+Saturday
+
+Sunday
